--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <section>
-  <h1>User list made with native Web Components and Angular</h1>
+  <h1>{{title}}</h1>
   <user-list></user-list>
 </section>
